# glovechat

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
resources/: config_sample.ini
src/: main.c
src/conf/: conf.c  conf.h  ini.c  ini.h
src/server/: main.c
src/server/sock/: tcp.h  tcp_bsd.c  tcp_win.c  tcp_win.h
src/server/util/: ipaddr.c  ipaddr.h  string.c  string.h  thread.c  thread.h  thread_posix.c  thread_win.c
src/sock/: ipaddr.h  tcp.h  tcp_bsd.c  tcp_ssl.c
src/util/: containers.c  containers.h  etc.c  etc.h  ini.c  ini.h  ipaddr.c  ipaddr.h  string.h  thread.h  thread_posix.c  thread_win.c
